<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mpressavicenna.app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_nfc"
        android:name="com.mpressavicenna.app.ui.nfc.NfcFragment"
        android:label="@string/nfc"
        tools:layout="@layout/fragment_nfc" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mpressavicenna.app.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.mpressavicenna.app.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mpressavicenna.app.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.mpressavicenna.app.ui.editProfile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>