<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.purchase.PurchaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelectPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/please_select_your_package"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btnSubPlans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            app:checkedButton="@id/btnProfileOn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectPackage"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMonthly"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnYearly"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yearly"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLifeTime"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_time"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <CheckBox
            android:id="@+id/cbPackageOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/package_1"
            android:visibility="gone"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubPlans" />

        <TextView
            android:id="@+id/tvPackageDetailsOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbPackageOne" />

        <CheckBox
            android:id="@+id/cbPackageTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/package_2"
            android:visibility="gone"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPackageDetailsOne" />

        <TextView
            android:id="@+id/tvSubscriptionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/monthly_subscription"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPackageDetailsOne" />

        <TextView
            android:id="@+id/tvPackagePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="$4.99/month"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubscriptionName" />

        <TextView
            android:id="@+id/tvPackageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/monthly_detail"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPackagePrice" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuySub"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/buy"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="@id/tvPackageDetails"
            app:layout_constraintStart_toStartOf="@id/tvPackageDetails"
            app:layout_constraintTop_toBottomOf="@id/tvPackageDetails" />

        <TextView
            android:id="@+id/tvPleaseBuyCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/terms_of_services_privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBuySub" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvCard"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/tvPleaseBuyCard"
            app:layout_constraintStart_toStartOf="@id/tvPleaseBuyCard"
            app:layout_constraintTop_toBottomOf="@id/tvPleaseBuyCard">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10sdp"
                android:text="VKR"
                android:textColor="@color/white"
                app:fontFamily="@font/poppins_bold" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description"
                />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvCardPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:visibility="gone"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="@id/cvCard"
            app:layout_constraintStart_toStartOf="@id/cvCard"
            app:layout_constraintTop_toBottomOf="@id/cvCard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/buy_card"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="@id/cvCard"
            app:layout_constraintStart_toStartOf="@id/cvCard"
            app:layout_constraintTop_toBottomOf="@id/tvCardPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>