<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivUserContact"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_profile_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/llDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/ivUserContact"
        app:layout_constraintStart_toEndOf="@id/ivUserContact"
        app:layout_constraintBottom_toBottomOf="@id/ivUserContact"
        app:layout_constraintEnd_toStartOf="@id/ivSelected">

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSelected"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_checked"
        android:scaleType="fitCenter"
        android:elevation="@dimen/_3sdp"
        android:contentDescription="@string/content_description"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/llDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>